--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -9,7 +9,7 @@
   --p-primary-color: #3f51b5 !important;
 
   /* Escalas Material Indigo */
-  --p-primary-50:  #e8eaf6 !important;
+  --p-primary-50: #e8eaf6 !important;
   --p-primary-100: #c5cae9 !important;
   --p-primary-200: #9fa8da !important;
   --p-primary-300: #7986cb !important;
@@ -22,4 +22,30 @@
 
   /* Texto en Primary */
   --p-primary-contrast-color: #ffffff;
+}
+
+.mi-tabla-personalizada thead>tr>th {
+  background-color: #3f51b5 !important;
+  color: white !important;
+}
+
+.footer-modal {
+  position: sticky;
+  bottom: 0;
+  background: #fff;
+  padding: 1rem;
+  display: flex;
+  justify-content: flex-end;
+  gap: 0.5rem;
+  border-top: 1px solid #ddd;
+}
+
+/* Cambiar fondo del header */
+.header-modal .p-dialog-header {
+  background: #3f51b5;
+  color: #fff;            /* texto en blanco */
+  font-weight: bold;
+  border-top-left-radius: 10px;  /* mismos bordes que el modal */
+  border-top-right-radius: 10px;
+  padding: 1rem;
 }
